# ai-sec

./: .dockerignore  .env.example  .gitignore  ANALYSIS_PLUGIN_TEMPLATE_GUIDE.md  ANALYSIS_TYPES.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  WARGAMING_IMPLEMENTATION.md  agreement.md  ai-sec  analysis_canvas.md  backend_ideas.md  check-backend-logs.sh  check-remote-access.sh  clean-docker-cache.sh  clean-rebuild.sh  datastructures.md  debug-prod.sh  debug.sh  diagnose-network.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  enhanced_compliance_cve_schema.md  expanded_stpa_sec_plus_framework.md  grok_prompt_generation.md  install-docker-ubuntu.sh  instructions.md  package-lock.json  package.json  pain_points.md  pnpm-lock.yaml  rebuild.sh  restart-prod.sh  run-backend-local.sh  run-tests-local.sh  setup-prod.sh  setup.sh  (+6 more)
apps/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.cli  Dockerfile.dev  Dockerfile.fixed  HOW_TO_RUN_ANALYSIS.md  PROMPT_SAVER_INTEGRATION.md  README.md  STEP2_DOCKER_FIX.md  STEP2_FIX_SUMMARY.md  STEP2_SCHEMA_ISSUE_RESOLUTION.md  cli.py  cli_demo.py  convert_demo_to_step1.py  convert_demo_to_step1_fixed.py  docker-compose.cli.yml  docker-compose.dev.yml  docker-compose.yml  fix_remaining_ts_errors.sh  fix_step2_mock.sh  fix_table_name_conflict.py  fix_ts_imports.sh  main.py  makefile  populate_demo_data.py  pyproject.toml  requirements-cli.txt  requirements-step1.txt  requirements.txt  run-analysis.sh  run_db_tests.sh  run_with_fixes.sh  setup_database.py  test-expert-config.yaml  test_frontend_integration.py  test_step1_agents.py  test_step1_api_http.py  test_step1_setup.py  test_stpa_sec_integration.py
apps/backend/analyses/banking-gpt4-turbo-standard/: analysis-results.json
apps/backend/analysis/inputs/: __init__.py  base.py  composite.py  image.py  pdf.py  pdf_mock.py  text.py
apps/backend/api/: analysis.py  artifacts.py  auth.py  auth_optional.py  chat.py  frameworks.py  main.py  settings.py  stpa_sec_step1.py  websocket.py
apps/backend/api/routes/: stpa_sec.py  stpa_sec_db.py
apps/backend/artifacts/step2_stpa_analysis_20250730_200742_20250731_043250/: step2-results.json
apps/backend/artifacts/step2_stpa_analysis_20250730_200742_20250731_044313/: step2-results.json
apps/backend/config/: settings.py
apps/backend/configs/: azure-gpt4-turbo-standard.yaml  enhanced-analysis.yaml  gpt4-turbo-enhanced.yaml  gpt4-turbo-standard.yaml  ollama-mistral-standard.yaml  standard-analysis.yaml  test-gpt4-standard.yaml  test-ollama-standard.yaml
apps/backend/core/: database.py  model_providers.py  model_providers_mock_override.py
apps/backend/core/agents/: base.py  expert_agent.py  expert_integration.py  input_agent.py  orchestrator.py  types.py  websocket_integration.py
apps/backend/core/context/: __init__.py  manager.py  manager_simple.py
apps/backend/core/memory/: context_manager.py
apps/backend/core/model_providers/: mock_provider.py
apps/backend/core/models/: analysis.py  database.py  schemas.py
apps/backend/core/services/: __init__.py  settings_service.py
apps/backend/core/templates/: mapper.py
apps/backend/core/utils/: json_parser.py  llm_client.py  output_display.py  prompt_saver.py
apps/backend/core/validation/: __init__.py  step2_validator.py
apps/backend/core/visualization/: __init__.py  control_structure_diagram.py
apps/backend/core/websocket/: __init__.py  manager.py
apps/backend/docs/: DATABASE_SETUP.md  DATABASE_STATUS_REPORT.md  DOCKER_DATABASE_SETUP.md  MODEL_CONFIGURATION.md  STEP1_TESTING.md  demo-banking-system.txt
apps/backend/migrations/: 001_core_stpa_sec_tables.sql  002_analysis_tables.sql  003_stpa_sec_plus_enhancements.sql  004_views_and_analytics.sql  005_cve_integration.sql  006_stpa_sec_step1_final.sql.skip  007_stpa_sec_step1_clean.sql  008_step1_agent_tables.sql  008_step1_agent_tables_fixed.sql  010_state_management.sql  011_constraints_and_boundaries.sql  012_settings_table.sql  013_fix_data_integrity_constraint.sql  014_input_analysis_table.sql  015_fix_agent_results_enhanced_mode.sql  016_step2_control_structure.sql  017_step2_fixes.sql  018_step2_identifier_fix.sql  019_step2_force_rebuild.sql  020_step2_ensure_identifier.sql  021_process_models.sql  022_system_description.sql  023_control_contexts.sql  024_control_structures.sql  025_fix_foreign_key_types.sql  026_process_models_cleanup.sql
apps/backend/storage/: database.py
apps/backend/tests/: apply_agent_migration.py  apply_state_management_migration.py  apply_step1_migration.py  conftest.py  run_tests.sh  test_agents_base.py  test_agents_stride.py  test_analysis.py  test_api_analysis.py  test_api_chat.py  test_context_manager.py  test_database_setup.py  test_demo_load.py  test_no_fallback.py  test_step1_api.py  test_step1_api_simple.py  test_step1_schema.py  verify_frontend_data.py
demo/: README.md
(+537 files in other folders)
